# ekg2

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.old  INSTALL  Makefile.am  NEWS  NEWS.en  README  README.md  SConstruct  TEST  autoclean.sh  autogen.sh  check_ekg2  check_potfiles  configure.ac  ekg2.h  gettext.h
docs/: .cvsignore  FAQ  IDEAS-2.0  Makefile.am  Perl-API-en.txt  Perl-API-pl.txt  README  SCons-notes.txt  TODO  ULOTKA  api.txt  autoconf-macros.md  commands-pl-utf.txt  commands-pl.txt  commands.txt  dcc.txt  devel-hints.txt  doxygen.settings  doxygenpl.txt  ekg.man.en  ekg.man.pl  ekg2-remote.en.1  ekg2-remote.pl.1  ekg2.en.1  ekg2.pl.1  ekg2log.dtd  ekl2.man.en  ekl2.man.pl  emoticons.ansi  emoticons.sample  events.txt  files.txt  gdb.txt  generate-doc.sh  generate-ekg2book.sh  mouse.txt  protocol.html  przenosny-kod.txt  python.txt  queries.txt  (+13 more)
docs/ekg2book/: .cvsignore  Makefile  book.xml  bookinfo.xml  develbook.xml  faq.xml  generate.sh  header.xml  sheet.xsl  txt2docbook.py
docs/ekg2book-en/: Makefile  bookinfo.xml  develbook.xml  faq.xml  generate.sh  sheet.xsl  txt2docbook.py  userbook.xml
ekg/: .cvsignore  HEADER  Makefile.am  _unused.c  abort.c  abort.h  audio.c  audio.h  audio_wav.h  bindings.c  bindings.h  char.c  char.h  commands.c  commands.h  completion.c  completion.h  configfile.c  configfile.h  connections.c  connections.h  debug.h  dynstuff.c  dynstuff.h  dynstuff_inline.h  ekg.c  ekg2-config.in  emoticons.c  emoticons.h  events.c  events.h  intern.h  internal.h  legacyconfig.c  log.c  log.h  metacontacts.c  metacontacts.h  msgqueue.c  msgqueue.h  (+39 more)
m4/: .cvsignore  .gitignore  Makefile.am  acx_pthread.m4  ekg2-checks.m4  ekg2-plugin.m4  ekg2-with.m4  expat.m4  gcc_fvisibility.m4  gcc_std.m4  gcc_str.m4  gcc_strict_aliasing.m4  gpg.m4  gtk2.m4  libgadu.m4  libgnutls.m4  libgsm.m4  libidn.m4  libxosd.m4  ncurses.m4  nls.m4  openssl.m4  oracle.m4  perl.m4  pkg.m4  python.m4  readline.m4  ruby.m4  sqlite.m4  sqlite3.m4  stdint.m4
plugins/autoresponder/: Makefile.am  autoresponder.c  vars-en.txt  vars-pl.txt
plugins/dbus/: DEVELOPERS-BIG-FAT-WARNING  Interface-Readme  Makefile.am  NOTES  README  SConscript  dbus.c  dbus.h  dbus_iface_im.c  dbus_iface_im.h  dbus_iface_im_ekg.c  dbus_iface_im_ekg.h  dbus_iface_im_ekg_crypto.c  dbus_iface_im_ekg_crypto.h  dbus_iface_im_ekg_logging.c  dbus_iface_im_ekg_logging.h  dbus_iface_im_ekg_protocol.c  dbus_iface_im_ekg_protocol.h  dbus_iface_im_ekg_session.c  dbus_iface_im_ekg_session.h  dbus_iface_im_ekg_ui.c  dbus_iface_im_ekg_ui.h
plugins/feed/: Makefile.am  PluginInfo  SConscript  feed.c  feed.h  nntp.c  rss.c
plugins/gg/: Makefile.am  SConscript  _unused.c  commands-en.txt  commands-pl-utf.txt  commands-pl.txt  commands.c  commands.txt  dcc.c  dcc.h  gg.c  gg.h  images.c  images.h  misc.c  misc.h  pubdir.c  pubdir.h  pubdir50.c  pubdir50.h  session-en.txt  session-pl-utf.txt  session-pl.txt  session.txt  token.h  vars-en.txt  vars-pl-utf.txt  vars-pl.txt  vars.txt
plugins/gpg/: Makefile.am  SConscript  commands-en.txt  commands-pl.txt  gpg.c
plugins/gtk/: .cvsignore  .gitignore  Makefile.am  PluginInfo  SConscript  bindings.c  bindings.h  chanview-tabs.inc  chanview-tree.c  chanview-tree.inc  chanview.c  chanview.h  completion.c  completion.h  gtk-misc-handlers.c  gtk-sessions.c  gtk-settings.c  gtkutil.c  gtkutil.h  main.c  main.h  maingui.c  maingui.h  menu.c  menu.h  palette.c  palette.h  userlistgui.c  userlistgui.h  xtext.c  xtext.h
plugins/httprc_xajax/: ChangeLog  Makefile.am  PluginInfo  README  SConscript  ekg2.css  ekg2.js  http_fstring_howto_do_it.txt  httprc_xajax.c  xajax_0.2.4.js
plugins/icq/: Makefile.am  SConscript  digest.c  icq.c  icq.h  icq_caps.c  icq_caps.h  icq_const.h  icq_debug.c  icq_debug.inc  icq_fieldnames.c  icq_fieldnames.inc  icq_flap_handlers.c  icq_flap_handlers.h  icq_snac_handlers.c  icq_snac_handlers.h  icq_snac_handlers_01service.c  icq_snac_handlers_01service.inc  icq_snac_handlers_02location.c  icq_snac_handlers_02location.inc  icq_snac_handlers_03buddy.c  icq_snac_handlers_03buddy.inc  icq_snac_handlers_04message.c  icq_snac_handlers_04message.inc  icq_snac_handlers_09bos.c  icq_snac_handlers_09bos.inc  icq_snac_handlers_0Alookup.c  icq_snac_handlers_0Alookup.inc  icq_snac_handlers_0Bstatus.c  icq_snac_handlers_0Bstatus.inc  icq_snac_handlers_13userlist.c  icq_snac_handlers_13userlist.inc  icq_snac_handlers_15extension.c  icq_snac_handlers_15extension.inc  icq_snac_handlers_17sigon.c  icq_snac_handlers_17sigon.inc  misc.c  misc.h  miscicq.h
plugins/ioctld/: .cvsignore  Makefile.am  SConscript  commands-pl-utf.txt  commands.txt  ioctld.c  ioctld.h  main.c
plugins/irc/: Changelog  IRCVERSION.h  Makefile.am  README  SConscript  _unused.c  autoacts.c  autoacts.h  commands-pl-utf.txt  commands-pl.txt  commands.txt  input.c  input.h  irc-ssl.h  irc.c  irc.h  misc.c  misc.h  people.c  people.h  session-pl-utf.txt  session-pl.txt  session.txt
plugins/jabber/: Makefile.am  PluginInfo  SConscript  commands-en.txt  commands-pl-utf.txt  commands-pl.txt  commands.c  commands.txt  digest.c  jabber-ssl.h  jabber.c  jabber.h  jabber_dcc.c  jabber_dcc.h  jabber_handlers.c  jabber_handlers_iq_error.c  jabber_handlers_iq_error.inc  jabber_handlers_iq_get.c  jabber_handlers_iq_get.inc  jabber_handlers_iq_result.c  jabber_handlers_iq_result.inc  jabber_handlers_tlen.c  jabber_handlers_tlen.inc  misc.c  session-en.txt  session-pl-utf.txt  session-pl.txt  session.txt  vars-en.txt  vars-pl-utf.txt  vars.txt  xmlnode.c
plugins/jogger/: Makefile.am  SConscript  drafts.c  feed.c  jogger.c  messages.c
plugins/logs/: Makefile.am  PluginInfo  README  SConscript  main.c  main.h  vars-pl.txt  (+2 more)
remote/: Makefile.am  SConscript  commands.c  commands.h  debug.h  dynstuff.c  dynstuff.h  dynstuff_inline.h  ekg-remote.c  plugins.c  plugins.h  queries.h  recode.c  recode.h  remote-ssl.h  remote.c  sessions.c  sessions.h  strings.c  strings.h  stuff.c  stuff.h  themes.c  themes.h  userlist.c  userlist.h  vars.c  vars.h  windows.c  windows.h  xmalloc.c  xmalloc.h
(+411 files in other folders)
